# advent-of-code-2022

./: README.md  pyproject.toml
day_1/: day_1.py  day_1_duck_db.py  day_1_profiling.py
day_1/data/: data_1.csv
day_10/: day_10.py
day_2/: day_2.py
day_3/: day_3.py
day_4/: day_4.py
day_5/: day_5.py
day_6/: day_6.py
day_7/: day_7.py
day_8/: day_8.py  day_8_approach_2.py
day_9/: day_9.py
utils/: data.py
